# data-upload-manager

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  SECURITY.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  setup.cfg  sonar-project.properties  tox.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: index.doctree
.doctrees/development/: index.doctree
.doctrees/installation/: index.doctree
.doctrees/support/: contact.doctree  contribute.doctree
.doctrees/terraform/: index.doctree
.doctrees/usage/: index.doctree
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: branch_cicd.yaml  codeql-analysis.yml  secrets-detection.yaml  stable-cicd.yaml  unstable-cicd.yaml
_sources/installation/: index.rst.txt
api/: index.html
development/: index.html
docs/requirements/v0.1.0/: REQUIREMENTS.md
docs/requirements/v0.1.0-dev/: REQUIREMENTS.md
docs/requirements/v0.2.0/: REQUIREMENTS.md
docs/requirements/v0.4.0-dev/: REQUIREMENTS.md
docs/requirements/v1.0.0/: REQUIREMENTS.md
docs/requirements/v1.1.0-dev/: REQUIREMENTS.md
docs/requirements/v1.3.0-dev/: REQUIREMENTS.md
docs/requirements/v2.0.0-dev/: REQUIREMENTS.md
docs/requirements/v2.1.2-dev/: REQUIREMENTS.md
docs/requirements/v2.2.2-dev/: REQUIREMENTS.md
docs/requirements/v2.5.0-dev/: REQUIREMENTS.md
docs/requirements/v2.6.0-dev/: REQUIREMENTS.md
docs/source/: conf.py  index.rst
docs/source/api/: index.rst
docs/source/development/: index.rst
docs/source/installation/: index.rst
docs/source/operations/: index.rst
docs/source/support/: contact.rst  contribute.rst
docs/source/terraform/: index.rst
docs/source/usage/: index.rst
installation/: index.html
integration/config/: localstack.ingress.config.ini.tmpl  localstack.tfvars.tmpl  pds-nucleus-dum-lambda-api-gateway-policy.json  pds-nucleus-dum-lambda-authorizer-policy.json  pds-nucleus-dum-lambda-ingress-policy.json
integration/pds/ingress/: dum_integration_tests.py
integration/scripts/: create_localstack_iam_roles.sh
scripts/: pds-ingress-client.py
src/pds/ingress/: conf.default.ini
src/pds/ingress/authorizer/: index.js  package-lock.json  package.json
src/pds/ingress/client/: pds_ingress_client.py  pds_status_client.py
src/pds/ingress/lambda/: pds_ingress_app.py
src/pds/ingress/service/: pds_ingress_app.py  pds_status_app.py  sync_s3_metadata.py
src/pds/ingress/service/config/: bucket-map.yaml  bucket-map.yaml.tmpl
src/pds/ingress/util/: auth_util.py  backoff_util.py  conf.default.ini  config_util.py  hash_util.py  log_util.py  node_util.py  path_util.py  progress_util.py  report_util.py
support/: contact.html  contribute.html
terraform/: .terraform.lock.hcl  backend.tf  index.html  main.tf  outputs.tf  providers.tf  variables.tf
terraform/modules/api_gateway/: api_gateway.tf  outputs.tf  variables.tf
terraform/modules/api_gateway/templates/: createstream-resource-mapping-template.json  data-upload-manager-oas30-apigateway.yaml.tftpl  log-resource-mapping-template.json  status-resource-mapping-template.json
terraform/modules/cognito/: cognito_pool.tf  outputs.tf  variables.tf
terraform/modules/lambda/authorizer/: lambda_authorizer.tf  outputs.tf  variables.tf
terraform/modules/lambda/service/: ingress_service.tf  outputs.tf  variables.tf
terraform/modules/sqs/: outputs.tf  sqs_queue.tf  variables.tf
tests/pds/ingress/client/: __init__.py  test_authorization_check.py
tests/pds/ingress/service/: conftest.py  test_pds_ingress_app.py  test_pds_status_app.py
tests/pds/ingress/service/config/: VERSION.txt  bucket-map.schema  bucket-map.yaml
tests/pds/ingress/util/: test_auth_util.py  test_backoff_util.py  test_config_util.py  test_log_util.py  test_path_util.py  test_report_util.py
tests/pds/ingress/util/data/: mock.backoff.config.ini  mock.localstack.config.ini  mock.nodebug.config.ini
usage/: index.html
