# Packaging Information
# =====================

[metadata]
name = pds-data-upload-manager
author = PDS
author_email = pds_operator@jpl.nasa.gov
description = Planetary Data Service Data Delivery Manager
long_description = file: README.md
long_description_content_type = text/markdown
version = file: src/pds/ingress/VERSION.txt
license = apache-2.0
keywords = pds, planetary data, aws, s3, ingress, data upload
url = https://github.com/NASA-PDS/data-upload-manager
download_url = https://github.com/NASA-PDS/data-upload-manager/releases/
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent


# Options
# -------
#
# The options here describe the morphology of the package, such as the
# packages it depends on, namespaces, and so forth.

[options]
install_requires =
    backoff~=2.2.1
    boto3~=1.25
    boto3-stubs[apigateway,cognito,essential]~=1.25
    joblib~=1.3.1
    more-itertools>=9.0.0
    requests>=2.23
    types-requests>=2.23
    PyYAML~=6.0
    types-PyYAML~=6.0

# Change this to False if you use things like __file__ or __path__—which you
# shouldn't use anyway, because that's what ``pkg_resources`` is for 🙂
zip_safe = True
include_package_data = True

# base directory for code is in src/. Don't change this.
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.9

[options.entry_points]
console_scripts =
    pds-ingress-client=pds.ingress.client.pds_ingress_client:main

[options.extras_require]
dev =
    awscli-local~=0.22.0
    black~=23.7.0
    coverage>=7.3,<7.7
    flake8~=6.1.0
    flake8-bugbear~=23.7.10
    flake8-docstrings~=1.7.0
    localstack-client~=2.5
    mypy~=1.5.1
    pep8-naming~=0.13.3
    pydocstyle~=6.3.0
    pytest>=7.4,<8.4
    pytest-cov~=4.1.0
    pytest-watch~=4.2.0
    pytest-xdist~=3.3.1
    pre-commit~=3.3.3
    sphinx~=7.2.6
    sphinx-rtd-theme~=2.0.0
    terraform-local~=0.18.2
    tox~=4.11.0
    types-setuptools~=68.1.0.0
    Jinja2<3.1

[options.packages.find]
# Don't change this. Needed to find packages under src/
where = src


# Coverage Testing
# ----------------
#
# The ``coverage`` tool helps ensure that all parts of your code is actually
# used. The settings here tell what files we can skip. Feel free to adjust
# this.
#
# See https://coverage.readthedocs.io/ for more.
[coverage:run]
omit = */__init__.py


# Test Options
# ------------
#
# Generic unit, functional, integration, acceptance, etc., testing goes here.
# Right now it's blank.
[test]
# (Blank for now.)


# Installation Options
# --------------------
#
# Any custom options needed to install this package go here. Right now it's
# blank.
[install]
# (Blank for now.)


# Flake8
# ------
#
# Flake8 (pronounced "flay-kate") is a Python style guide tool. It checks your
# code against a library of "best practices" for writing Python and lets you
# know when things aren't quite the "best". There are numerous options below
# and you can read more about the tool at https://flake8.pycqa.org/
[flake8]
max-line-length = 120
extend-exclude = docs,tests,setup.py
docstring_convention = numpy

# Ignoring:
# E203 prevents flake8 from complaining about whitespace around slice
# components. Black formats per PEP8 and flake8 doesn't like some of
# this.
#
# E501 prevents flake8 from complaining line lengths > 79. We will use
# flake8-bugbear's B950 to handle line length lint errors. This trips
# when a line is > max-line-length + 10%.
#
# W503 is ignored for not just because it makes use of
# left-aligned binary operators in multi-line expressions, but because the
# opposite advice is now the recommended practice; see
# • https://rhodesmill.org/brandon/slides/2012-11-pyconca/#laying-down-the-law
# • https://github.com/PyCQA/pycodestyle/pull/502
# • https://www.flake8rules.com/rules/W503.html
# • ET Tufte, _Seeing with Fresh Eyes: Meaning, Space, Data, Truth_, Graphics
#   Press 2020, p.14.
#
# D205, D400 and D401 are ignored to allow flexibility with numpy docstring format.
extend-ignore = D205, D400, D401, E203, E501, W503

# Selects following test categories:
# D: Docstring errors and warnings
# E, W: PEP8 errors and warnings
# F: PyFlakes codes
# N: PEP8 Naming plugin codes
# B: flake8-bugbear codes
# B***: Specific flake8-bugbear opinionated warnings to trigger
#   B902: Invalid first argument used for method. Use self for instance
#       methods, and cls for class methods
#   B903: Use collections.namedtuple (or typing.NamedTuple) for data classes
#       that only set attributes in an __init__ method, and do nothing else.
#   B950: Line too long. This is a pragmatic equivalent of pycodestyle's
#       E501: it considers "max-line-length" but only triggers when the value
#       has been exceeded by more than 10%.
select = D,E,F,N,W,B,B902,B903,B950
